[tool.pytest.ini_options]
pythonpath='.'
testpaths='tests'
[tool.poetry]
name = "general-python"
version = "0.1.0"
description = ""
authors = ["Mark Barbaric <markantonybarbaric@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^2.0.0"
pandas = "^2.2.2"
pytest = "^8.2.2"
coverage = "^7.5.3"
flake8 = "^7.1.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
