[tool.pytest.ini_options]
pythonpath='.'
testpaths='tests'
[tool.poetry]
name = "general-python"
version = "0.1.0"
description = ""
authors = ["Mark Barbaric <markantonybarbaric@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pika = "^1.3.2"
websockets = "^12.0"
fastapi = "^0.112.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
