[tool.pytest.ini_options]
pythonpath='.'
testpaths='tests'
[tool.poetry]
name = "general-python"
version = "0.1.0"
description = ""
authors = ["Mark Barbaric <markantonybarbaric@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pika = "^1.3.2"
websockets = "^12.0"
fastapi = {extras = ["standard"], version = "^0.112.0"}
httpx = "^0.27.0"
coverage = "^7.6.1"
flask = "^3.0.3"
flask-restful = "^0.3.10"
pydantic-settings = "^2.4.0"
asyncio = "^3.4.3"
flask-sqlalchemy = "^3.1.1"
mysql-connector-python = "^9.0.0"
sqlalchemy = "^2.0.32"
mysqlclient = "2.2.0"

[tool.poetry.group.jupyter.dependencies]
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
